# gpte-bench-template

./: .gitignore  LICENSE  README.md  add_score_board_entry.py  bench_config.toml  benchmark_agent.py  prompt  pyproject.toml  run.sh  scoreboard.yaml
